--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,8 @@
 public net.minecraft.tileentity.SignTileEntity field_145915_a #signText
 public net.minecraft.world.entity.Mob f_21353_ # persistenceRequired
 public net.minecraft.world.level.block.WaterlilyBlock m_6266_(Lnet/minecraft/world/level/block/state/BlockState;Lnet/minecraft/world/level/BlockGetter;Lnet/minecraft/core/BlockPos;)Z # mayPlaceOn
+public net.minecraft.world.level.block.grower.AbstractMegaTreeGrower m_203620_(Ljava/util/Random;)Lnet/minecraft/core/Holder; # getConfiguredMegaFeature
+
+public net.minecraft.world.level.block.grower.DarkOakTreeGrower m_203620_(Ljava/util/Random;)Lnet/minecraft/core/Holder; # getConfiguredMegaFeature
+public net.minecraft.world.level.block.grower.JungleTreeGrower m_203620_(Ljava/util/Random;)Lnet/minecraft/core/Holder; # getConfiguredMegaFeature
+public net.minecraft.world.level.block.grower.SpruceTreeGrower m_203620_(Ljava/util/Random;)Lnet/minecraft/core/Holder; # getConfiguredMegaFeature
